--- a/pages/parking/parking.html
+++ b/pages/parking/parking.html
@@ -22,6 +22,7 @@
       <span>Booked</span>
     </div>
   </div>
+  <div id="mapContainer"></div>
   <div id="parkingLot" class="parking type1"></div>
   
   
